unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Amount_Overrun_Percentage__c.field-meta.xml
<CustomField>
    <fullName>pse__Amount_Overrun_Percentage__c</fullName>
    <label>Amount Overrun Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>