unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Expense_Amount_Consumed__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Amount_Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expense Amount Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>