unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Maximum_Consumable_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Maximum_Consumable_Total_Amount__c</fullName>
    <formula>IF(pse__Total_Amount_Overrun_Allowed__c,(1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c,pse__Total_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum Consumable Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>