unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Percent_Total_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Total_Amount_Remaining__c</fullName>
    <formula>IF(pse__Total_Amount__c=0,1,(pse__Total_Amount__c-pse__Total_Amount_Consumed__c)/pse__Total_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Total Amount Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>