unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Total_Amount_Overrun_Allowed__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Amount_Overrun_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Amount Overrun Allowed</label>
    <type>Checkbox</type>
</CustomField>