unpackaged/main/default/objects/pse__Budget_Header__c/fields/pse__Total_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Amount_Remaining__c</fullName>
    <formula>pse__Total_Amount__c - pse__Amount_Consumed__c - pse__Expense_Amount_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>