unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Account_required_and_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Account_required_and_constant</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LEN(pse__Account__c)=0,ISCHANGED(pse__Account__c))</errorConditionFormula>
    <errorDisplayField>pse__Account__c</errorDisplayField>
    <errorMessage>Account is required and cannot be changed once set</errorMessage>
</ValidationRule>