unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Budget_Amount_Consumed_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Amount_Consumed_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(pse__Amount_Consumed__c)</errorConditionFormula>
    <errorDisplayField>pse__Amount_Consumed__c</errorDisplayField>
    <errorMessage>Budget Amount Consumed is required</errorMessage>
</ValidationRule>