unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Budget_Total_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Total_Required</fullName>
    <active>true</active>
    <description>Budget Total is required</description>
    <errorConditionFormula>ISNULL(pse__Amount__c)</errorConditionFormula>
    <errorDisplayField>pse__Amount__c</errorDisplayField>
    <errorMessage>Budget Total is required</errorMessage>
</ValidationRule>