unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Currency_is_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Currency_is_constant</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency cannot be changed</errorMessage>
</ValidationRule>