unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Enforce_Total_Amount_Overrun.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Enforce_Total_Amount_Overrun</fullName>
    <active>true</active>
    <errorConditionFormula>IF(pse__Total_Amount_Overrun_Allowed__c,
    pse__Total_Amount_Consumed__c &gt; (1+pse__Total_Amount_Overrun_Percentage__c)*pse__Total_Amount__c,
    pse__Total_Amount_Consumed__c &gt; pse__Total_Amount__c)</errorConditionFormula>
    <errorMessage>Cannot update budget amount because the amount consumed is greater than the maximum allowable total amount.</errorMessage>
</ValidationRule>