unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Project_Currency_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Project_Currency_Mismatch</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) != TEXT(pse__Project__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>The project's currency must match the currency of this budget header</errorMessage>
</ValidationRule>