unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Project_required_and_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Project_required_and_constant</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISCHANGED(pse__Project__c),LEN(pse__Project__c)=0)</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>Project is required and cannot be changed once set</errorMessage>
</ValidationRule>