unpackaged/main/default/objects/pse__Budget_Header__c/validationRules/pse__Total_Overrun_Requires_Other_Overrun.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Total_Overrun_Requires_Other_Overrun</fullName>
    <active>true</active>
    <description>If the total overrun is allowed, amount overrun and/or expense overrun must also be allowed</description>
    <errorConditionFormula>AND(pse__Total_Amount_Overrun_Allowed__c,NOT(pse__Amount_Overrun_Allowed__c),NOT(pse__Expense_Amount_Overrun_Allowed__c))</errorConditionFormula>
    <errorDisplayField>pse__Total_Amount_Overrun_Allowed__c</errorDisplayField>
    <errorMessage>If Total Amount Overrun Allowed is checked, Amount Overrun Allowed and/or Expense Amount Overrun Allowed must also be checked.</errorMessage>
</ValidationRule>